[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "marktree"
version = "1.1.0"
dependencies = [
    "pyperclip >= 1.8.2"
]
requires-python = ">=3.8"
authors = [
    {name="yusu79"},
    {email="oss@yusu79.com"}
]
description = "convert headings in a Markdown file (.md) into a tree-like structure and output."
readme = "README_en.md"
license = {file = "LICENSE"}
keywords = [
    "markdown", 
    "tree", 
    "pyperclip"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Other Audience",
  "Topic :: Terminals",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://yusu79.com"
Repository = "https://github.com/yusu79/marktree"

[project.scripts]
marktree = "marktree:main"

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]
