[project]
name = "marktree"
version = "1.2.0"
description = "Convert headings in a Markdown file (.md) into a tree-like structure and output."
authors = [
    {name = "yusu79",email = "oss@yusu79.com"}
]
readme = "README_en.md"
requires-python = ">=3.13"
dependencies = [
    "pyperclip (>=1.10.0,<2.0.0)"
]
license = { text = "MIT" }

[project.urls]
Homepage = "https://yusu79.com"
Repository = "https://github.com/yusu79/marktree"
Changelog = "https://github.com/yusu79/marktree/blob/main/CHANGELOG.md"

[project.scripts] # cli.pyに登録されたmain関数を直接実行できる
marktree = "marktree.cli:main" 

[tool.poetry]
packages = [{include = "marktree", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
